--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "alea": "^1.0.1",
     "gsap": "^3.11.4",
+    "simplex-noise": "^4.0.1",
     "stats.js": "^0.17.0",
     "three": "^0.150.1"
   }
